<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!--
        FIXED Ensure l10n works properly, ensure rtl is enabled (also start/end instead of left/right)
        Your boss says:
"We need to prepare Stock Hawk for the Egypt release. Make sure our translators know what to change and make sure the Arabic script will format nicely."

 -->
    <string name="app_name">Stock Hawk</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>
    <string name="pref_stocks_key" translatable="false">stocks</string>
    <string name="pref_display_mode_key" translatable="false">displayMode</string>
    <string name="pref_display_mode_default" translatable="false">@string/pref_display_mode_percentage_key</string>

    <string name="pref_display_mode_absolute_key" translatable="false">absolute</string>
    <string name="pref_display_mode_percentage_key" translatable="false">percentage</string>

    <string name="default_stocks_yahoo" translatable="false">YHOO</string>
    <string name="default_stocks_apple" translatable="false">AAPL</string>
    <string name="default_stocks_microsoft" translatable="false">MSFT</string>
    <string name="default_stocks_facebook" translatable="false">FB</string>

    <string name="action_change_units">Switch between absolute value and percentage</string>
    <string name="action_change_to_percentage">Show change percentages (rather than absolute values)</string>
    <string name="action_change_to_absolute_value">Show absolute change values (rather than percentages)</string>
    <string name="dialog_title">Add Stock</string>
    <string name="dialog_hint">Symbol (capital letters, e.g., GOOG)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>

    <string name="error_no_network">No network connectivity! Will load stock data when the network is available.</string>
    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>

    <string name="toast_stock_added_no_connectivity">Symbol <xliff:g example="GOOG">%s</xliff:g> added. Will refresh when network available.</string>
    <string name="toast_no_connectivity">Will refresh when network available.</string>
    <string name="warnNetworkDelays">Unusual network delays, please be patient…</string>
    <string name="exampleQuoteSymbol" translatable="false">GOOG</string>
    <string name="exampleQuoteValue">1000.00</string>
    <string name="exampleQuotePercentage">100%</string>
    <string name="widgetTitle">Stock Hawk - at a glance</string>
    <string name="title_activity_stock_detail">Stock history</string>
    <string name="examplePercentageChange">5.56%</string>
    <string name="exampleAbsoluteChange">+50$</string>
    <string name="exampleCloseValue">950$</string>
    <string name="exampleOpenValue">900$</string>
    <string name="detailChangeText">Change</string>
    <string name="detailOpenCloseText"><![CDATA[Open->Close]]></string>
    <string name="exampleHighValue">1200$</string>
    <string name="exampleLowValue">800$</string>
    <string name="detailLowHighText">Low-High</string>
    <string name="exampleDate">2017–05–21</string>
    <string name="detailDateText">Date</string>
    <string name="detailChartActivityTitle">History of <xliff:g example="GOOG">{0}</xliff:g></string>
    <string name="deletionFailed">Item non deleted, something went wrong!</string>
    <string name="stockStymbolDeleted">Stock <xliff:g example="GOOG">{0}</xliff:g> is not tracked anymore</string>
    <string name="stockSymbolAddedAgain">Stock <xliff:g example="GOOG">{0}</xliff:g> is tracked again as required</string>
    <string name="undoRemoval">UNDO</string>
    <string name="unknownStockSymbol">Unknown stock symbol <xliff:g example="GOOG">{0}</xliff:g></string>
    <string name="stockContentDescription">Stock symbol <xliff:g example="GOOG">%s</xliff:g> current value is <xliff:g example="45.34$">%s</xliff:g>: therefore <xliff:g example="it has soared by 3.45%">%s</xliff:g></string>
    <string name="stockSymbolSoaredDescription">it has soared by <xliff:g example="3.45%">%s</xliff:g></string>
    <string name="stockSymbolDecreasedDescription">it has decreased by <xliff:g example="3.45%">%s</xliff:g></string>
    <string name="add_another_stock_symbol_to_track">Add another stock symbol to track</string>
    <string name="exampleErrorMessage">Error message</string>
    <string name="detailedStockContentDescription">On <xliff:g example="19/05/2017">%s</xliff:g>, stock symbol <xliff:g example="GOOG">%s</xliff:g> floated between a low of <xliff:g example="800$">%s</xliff:g> and a high of <xliff:g example="1200$">%s</xliff:g>, opening with value <xliff:g example="900$">%s</xliff:g>, and closing with value <xliff:g example="950$">%s</xliff:g>. Thus, <xliff:g example="it has soared by 3.45%">%s</xliff:g></string>
    <string name="detailToMainButtonContentDescription">Return to list of tracked stock symbols</string>
    <string name="stock_history_chart">Stock history chart</string>
</resources>
