<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_list_item"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin">

    <!-- FIXME  merge/factor out wrt list_item_quote -->
    <TextView
        android:id="@+id/symbol"
        style="@style/StockSymbolTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        tools:text="@string/exampleQuoteSymbol" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end">

        <TextView
            android:id="@+id/price"
            style="@style/BidPriceTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/priceMarginEnd"
            tools:text="@string/exampleQuoteValue" />

        <TextView
            android:id="@+id/change"
            style="@style/PercentChangeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/percent_change_pill_green"
            android:paddingEnd="@dimen/changeHorizontalMargin"
            android:paddingLeft="@dimen/changeHorizontalMargin"
            android:paddingRight="@dimen/changeHorizontalMargin"
            android:paddingStart="@dimen/changeHorizontalMargin"
            tools:text="@string/exampleQuotePercentage" />
    </LinearLayout>
</LinearLayout>