<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/symbol"
        style="@style/StockSymbolTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        tools:text="@string/exampleQuoteSymbol" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end">

        <TextView
            android:id="@+id/price"
            style="@style/BidPriceTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/priceMarginEnd"
            tools:text="@string/exampleQuoteValue" />

        <TextView
            android:id="@+id/change"
            style="@style/PercentChangeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/percent_change_pill_green"
            android:paddingEnd="@dimen/changeHorizontalMargin"
            android:paddingStart="@dimen/changeHorizontalMargin"
            tools:text="@string/exampleQuotePercentage" />

        <com.robinhood.spark.SparkView
            android:id="@+id/sparkview"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/holo_blue_light"
            app:spark_lineColor="@color/colorPrimaryDark" />
    </LinearLayout>
</LinearLayout>
