<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginBottom="@dimen/detail_bottom_margin"
    android:layout_marginEnd="@dimen/detail_horizontal_margin"
    android:layout_marginStart="@dimen/detail_horizontal_margin"
    android:layout_marginTop="@dimen/detail_top_margin"
    android:layout_weight="0.02"
    android:background="@color/cardview_light_background"
    android:elevation="@dimen/chartDetailElevation"
    android:paddingBottom="@dimen/detail_vertical_padding"
    android:paddingEnd="@dimen/detail_horizontal_padding"
    android:paddingStart="@dimen/detail_horizontal_padding"
    android:paddingTop="@dimen/detail_vertical_padding"
    tools:showIn="@layout/activity_stock_detail">

    <TextView
        android:id="@+id/tv_highlighted_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="@dimen/detail_component_vertical_margin"
        android:layout_marginEnd="@dimen/detail_component_horizontal_margin"
        android:layout_marginStart="@dimen/detail_component_horizontal_margin"
        android:layout_marginTop="@dimen/detail_component_vertical_margin"
        android:layout_weight="0.04"
        android:paddingBottom="@dimen/detail_component_vertical_padding"
        android:paddingEnd="@dimen/detail_component_horizontal_padding"
        android:paddingStart="@dimen/detail_component_horizontal_padding"
        android:paddingTop="@dimen/detail_component_vertical_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="invisible"
        tools:text="@string/detailPlaceHolderText" />

    <GridLayout
        android:id="@+id/chart_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:rowCount="4">

        <TextView
            android:layout_columnSpan="1"
            android:layout_columnWeight="2"
            android:layout_gravity="start|center_vertical"
            android:layout_marginBottom="@dimen/detail_component_vertical_margin"
            android:layout_marginEnd="@dimen/detail_component_horizontal_margin"
            android:layout_marginStart="@dimen/detail_component_horizontal_margin"
            android:layout_marginTop="@dimen/detail_component_vertical_margin"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:paddingBottom="@dimen/detail_component_vertical_padding"
            android:paddingEnd="@dimen/detail_component_horizontal_padding"
            android:paddingStart="@dimen/detail_component_horizontal_padding"
            android:paddingTop="@dimen/detail_component_vertical_padding"
            android:text="@string/detailDateText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/detail_date"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="end|center_vertical"
            android:layout_marginBottom="@dimen/detail_component_vertical_margin"
            android:layout_marginEnd="@dimen/detail_component_horizontal_margin"
            android:layout_marginStart="@dimen/detail_component_horizontal_margin"
            android:layout_marginTop="@dimen/detail_component_vertical_margin"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:paddingBottom="@dimen/detail_component_vertical_padding"
            android:paddingEnd="@dimen/detail_component_horizontal_padding"
            android:paddingStart="@dimen/detail_component_horizontal_padding"
            android:paddingTop="@dimen/detail_component_vertical_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/exampleDate" />

        <TextView
            android:layout_columnSpan="1"
            android:layout_columnWeight="2"
            android:layout_gravity="start|center_vertical"
            android:layout_marginBottom="@dimen/detail_component_vertical_margin"
            android:layout_marginEnd="@dimen/detail_component_horizontal_margin"
            android:layout_marginStart="@dimen/detail_component_horizontal_margin"
            android:layout_marginTop="@dimen/detail_component_vertical_margin"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:paddingBottom="@dimen/detail_component_vertical_padding"
            android:paddingEnd="@dimen/detail_component_horizontal_padding"
            android:paddingStart="@dimen/detail_component_horizontal_padding"
            android:paddingTop="@dimen/detail_component_vertical_padding"
            android:text="@string/detailLowHighText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/detail_low"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="end|center_vertical"
            android:layout_marginBottom="@dimen/detail_component_vertical_margin"
            android:layout_marginEnd="@dimen/detail_component_horizontal_margin"
            android:layout_marginStart="@dimen/detail_component_horizontal_margin"
            android:layout_marginTop="@dimen/detail_component_vertical_margin"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:paddingBottom="@dimen/detail_component_vertical_padding"
            android:paddingEnd="@dimen/detail_component_horizontal_padding"
            android:paddingStart="@dimen/detail_component_horizontal_padding"
            android:paddingTop="@dimen/detail_component_vertical_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/exampleLowValue" />

        <TextView
            android:id="@+id/detail_high"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="end|center_vertical"
            android:layout_marginBottom="@dimen/detail_component_vertical_margin"
            android:layout_marginEnd="@dimen/detail_component_horizontal_margin"
            android:layout_marginStart="@dimen/detail_component_horizontal_margin"
            android:layout_marginTop="@dimen/detail_component_vertical_margin"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:paddingBottom="@dimen/detail_component_vertical_padding"
            android:paddingEnd="@dimen/detail_component_horizontal_padding"
            android:paddingStart="@dimen/detail_component_horizontal_padding"
            android:paddingTop="@dimen/detail_component_vertical_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/exampleHighValue" />

        <TextView
            android:layout_columnSpan="1"
            android:layout_columnWeight="2"
            android:layout_gravity="start|center_vertical"
            android:layout_marginBottom="@dimen/detail_component_vertical_margin"
            android:layout_marginEnd="@dimen/detail_component_horizontal_margin"
            android:layout_marginStart="@dimen/detail_component_horizontal_margin"
            android:layout_marginTop="@dimen/detail_component_vertical_margin"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:paddingBottom="@dimen/detail_component_vertical_padding"
            android:paddingEnd="@dimen/detail_component_horizontal_padding"
            android:paddingStart="@dimen/detail_component_horizontal_padding"
            android:paddingTop="@dimen/detail_component_vertical_padding"
            android:text="@string/detailOpenCloseText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/detail_open"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="end|center_vertical"
            android:layout_marginBottom="@dimen/detail_component_vertical_margin"
            android:layout_marginEnd="@dimen/detail_component_horizontal_margin"
            android:layout_marginStart="@dimen/detail_component_horizontal_margin"

            android:layout_marginTop="@dimen/detail_component_vertical_margin"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:paddingBottom="@dimen/detail_component_vertical_padding"
            android:paddingEnd="@dimen/detail_component_horizontal_padding"
            android:paddingStart="@dimen/detail_component_horizontal_padding"
            android:paddingTop="@dimen/detail_component_vertical_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/exampleOpenValue" />

        <TextView
            android:id="@+id/detail_close"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="end|center_vertical"
            android:layout_marginBottom="@dimen/detail_component_vertical_margin"
            android:layout_marginEnd="@dimen/detail_component_horizontal_margin"
            android:layout_marginStart="@dimen/detail_component_horizontal_margin"
            android:layout_marginTop="@dimen/detail_component_vertical_margin"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:paddingBottom="@dimen/detail_component_vertical_padding"
            android:paddingEnd="@dimen/detail_component_horizontal_padding"
            android:paddingStart="@dimen/detail_component_horizontal_padding"
            android:paddingTop="@dimen/detail_component_vertical_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/exampleCloseValue" />

        <TextView
            android:layout_columnSpan="1"
            android:layout_columnWeight="2"
            android:layout_gravity="start|center_vertical"
            android:layout_marginBottom="@dimen/detail_component_vertical_margin"
            android:layout_marginEnd="@dimen/detail_component_horizontal_margin"
            android:layout_marginStart="@dimen/detail_component_horizontal_margin"
            android:layout_marginTop="@dimen/detail_component_vertical_margin"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:paddingBottom="@dimen/detail_component_vertical_padding"
            android:paddingEnd="@dimen/detail_component_horizontal_padding"
            android:paddingStart="@dimen/detail_component_horizontal_padding"
            android:paddingTop="@dimen/detail_component_vertical_padding"
            android:text="@string/detailChangeText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/detail_absolute_change"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="end|center_vertical"
            android:layout_marginBottom="@dimen/detail_component_vertical_margin"
            android:layout_marginEnd="@dimen/detail_component_horizontal_margin"
            android:layout_marginStart="@dimen/detail_component_horizontal_margin"
            android:layout_marginTop="@dimen/detail_component_vertical_margin"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:paddingBottom="@dimen/detail_component_vertical_padding"
            android:paddingEnd="@dimen/detail_component_horizontal_padding"
            android:paddingStart="@dimen/detail_component_horizontal_padding"
            android:paddingTop="@dimen/detail_component_vertical_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/exampleAbsoluteChange" />

        <TextView
            android:id="@+id/detail_percentage_change"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="end|center_vertical"
            android:layout_marginBottom="@dimen/detail_component_vertical_margin"
            android:layout_marginEnd="@dimen/detail_component_horizontal_margin"
            android:layout_marginStart="@dimen/detail_component_horizontal_margin"
            android:layout_marginTop="@dimen/detail_component_vertical_margin"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:paddingBottom="@dimen/detail_component_vertical_padding"
            android:paddingEnd="@dimen/detail_component_horizontal_padding"
            android:paddingStart="@dimen/detail_component_horizontal_padding"
            android:paddingTop="@dimen/detail_component_vertical_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/examplePercentageChange" />
    </GridLayout>
</android.support.v7.widget.CardView>